real time transcription

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         <input type="text" id="whisperApiKey" />
       </div>
       <div class="config-item">
+        <label for="whisperSocketUrl">Whisper Socket URL:</label>
+        <input type="text" id="whisperSocketUrl" />
+      </div>
+      <div class="config-item">
         <label for="aiScribeUrl">AI Scribe URL:</label>
         <input type="text" id="aiScribeUrl" />
       </div>
