--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
         <label for="aiScribeContextAfter">AI Scribe Context After:</label>
         <textarea id="aiScribeContextAfter" rows="3"></textarea>
       </div>
+      <div class="config-item">
+        <label for="realtimeToggle">
+          Enable Real-time Processing
+          <input type="checkbox" id="realtimeToggle" />
+        </label>
+      </div>
       <button id="saveConfig">Save Configuration</button>
     </div>
 
