adding options page and moving config logic to a different module

--- a/welcome.html
+++ b/welcome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Request Permissions</title>
+    <title>Freescribe Copilot - Request Permissions</title>
     <script src="./welcome.js"></script>
   </head>
   <body>
