changes in naming and seperating modules

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Freescribe Copilot</title>
+    <title>FreeScribe</title>
     <style>
       body {
         width: 300px;
@@ -15,7 +15,7 @@
         padding: 10px;
         margin: 5px 0;
       }
-      #soapNotes {
+      #notes {
         background-color: #f0f0f0;
         padding: 10px;
         border: 1px solid #ccc;
@@ -33,8 +33,8 @@
     <button id="recordButton">Record</button>
     <button id="stopButton" disabled>Stop</button>
     <textarea id="userInput" rows="10"></textarea>
-    <button id="generateSoapButton">Generate SOAP Notes</button>
-    <pre id="soapNotes"></pre>
+    <button id="generateNotesButton">Generate Notes</button>
+    <pre id="notes"></pre>
     <script type="module" src="index.js"></script>
   </body>
 </html>
