--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Freescribe Copilot - Options</title>
+    <title>FreeScribe - Options</title>
     <style>
       body {
         width: 300px;
@@ -36,28 +36,28 @@
     <div id="configSection">
       <h3>Configuration</h3>
       <div class="config-item">
-        <label for="whisperUrl">Whisper Server URL:</label>
-        <input type="text" id="whisperUrl" />
+        <label for="transcriptionUrl">Transcription Server URL:</label>
+        <input type="text" id="transcriptionUrl" />
       </div>
       <div class="config-item">
-        <label for="whisperApiKey">Whisper API Key:</label>
-        <input type="text" id="whisperApiKey" />
+        <label for="transcriptionApiKey">Transcription Server API Key:</label>
+        <input type="text" id="transcriptionApiKey" />
       </div>
       <div class="config-item">
-        <label for="aiScribeUrl">AI Scribe URL:</label>
-        <input type="text" id="aiScribeUrl" />
+        <label for="llmUrl">LLM URL:</label>
+        <input type="text" id="llmUrl" />
       </div>
       <div class="config-item">
-        <label for="aiScribeModel">AI Scribe Model:</label>
-        <input type="text" id="aiScribeModel" />
+        <label for="llmModel">LLM Model:</label>
+        <input type="text" id="llmModel" />
       </div>
       <div class="config-item">
-        <label for="aiScribeContextBefore">AI Scribe Context Before:</label>
-        <textarea id="aiScribeContextBefore" rows="3"></textarea>
+        <label for="llmContextBefore">LLM Context Before:</label>
+        <textarea id="llmContextBefore" rows="3"></textarea>
       </div>
       <div class="config-item">
-        <label for="aiScribeContextAfter">AI Scribe Context After:</label>
-        <textarea id="aiScribeContextAfter" rows="3"></textarea>
+        <label for="llmContextAfter">LLM Context After:</label>
+        <textarea id="llmContextAfter" rows="3"></textarea>
       </div>
       <div class="config-item">
         <label for="realtimeToggle">
