--- a/public/welcome.html
+++ b/public/welcome.html
@@ -23,6 +23,16 @@
           <li>Customizable settings for optimal performance</li>
         </ul>
 
+        <h2 class="mb-3">Keyboard Shortcuts:</h2>
+        <ul class="shortcut-list mb-4">
+          <li>
+            Open FreeScribe Extension:
+            <code>Alt + Shift + F</code>
+          </li>
+          <li>Start/Stop Recording: <code>Alt + Shift + R</code></li>
+          <li>Configure: <code>Alt + Shift + Comma (,)</code></li>
+        </ul>
+
         <p class="mb-4">
           To get started, click on the FreeScribe icon in your browser toolbar.
           You can record audio, transcribe it, and generate notes with just a
