option to add custom local s2t and llm model

--- a/src-v2/options.html
+++ b/src-v2/options.html
@@ -65,6 +65,23 @@
               </select>
             </div>
           </div>
+
+          <div class="transcriptionLocalCustomSettings config-item hidden">
+            <label for="transcriptionLocalModelCustom">Custom Local Transcription:</label>
+            &nbsp;<i
+                  class="fas fa-question-circle"
+                  data-toggle="tooltip"
+                  data-placement="right"
+                  title="Enter custom local transcription."
+          ></i>
+            <input
+                    type="text"
+                    id="transcriptionLocalModelCustom"
+                    name="transcriptionLocalModelCustom"
+                    class="form-control"
+            />
+          </div>
+
           <div class="transcriptionServerSettings config-item">
             <label for="transcriptionUrl">Transcription Server URL:</label>
             &nbsp;<i class="fas fa-question-circle"
@@ -144,6 +161,23 @@
               </select>
             </div>
           </div>
+
+          <div class="llmLocalCustomSettings config-item hidden">
+            <label for="llmLocalModelCustom">Custom Local LLM:</label>
+            &nbsp;<i
+                  class="fas fa-question-circle"
+                  data-toggle="tooltip"
+                  data-placement="right"
+                  title="Enter custom local llm."
+          ></i>
+            <input
+                    type="text"
+                    id="llmLocalModelCustom"
+                    name="llmLocalModelCustom"
+                    class="form-control"
+            />
+          </div>
+
           <div class="llmServerSettings config-item">
             <label for="llmUrl">LLM Server URL:</label>
             &nbsp;<i
