--- a/src-v2/welcome.html
+++ b/src-v2/welcome.html
@@ -27,6 +27,11 @@
               Choose between <strong>local</strong> or <strong>server-based</strong> transcription and LLM
               processing to suit your needs
             </p>
+            <aside class="webgpu-note" role="note">
+              ⚙️ When using <strong>local</strong> transcription and LLM, please check and enable <strong>Unsafe WebGPU Support</strong> from <a href="chrome://flags/#enable-unsafe-webgpu">chrome://flags/#enable-unsafe-webgpu</a>
+              and <strong>use graphics acceleration when available</strong> from <a href="chrome://settings/system">chrome://settings/system</a>.
+              <strong>Please copy these links and paste them into your browser's address bar.</strong>
+            </aside>
           </li>
           <li>
             <strong>Real-time Audio Transcription</strong>
