--- a/src-v2/popup.html
+++ b/src-v2/popup.html
@@ -50,6 +50,8 @@
             </button>
         </div>
 
+        <div id="errorMessage" class="alert alert-danger" role="alert" style="display: none;"></div>
+
         <div class="textarea-container mb-3">
           <textarea
                   id="userInput"
